main.css
body {
	background: #835C3B;
	overflow: hidden;
	font-family: "arial";
	text-align: center;
}

body h1 {
	color: #47311f;
}

#settingsButtonDiv {
	overflow: hidden;
	position: fixed;
	top: 0;
	right: 0;
	width: 10vh;
	height: 10vh;
	max-height: 60px;
	max-width:60px;
	background: black;
	opacity: 0.4;
	border-radius: 10px;
	z-index: 50;
	transition: 0.2s;
	user-select: none;
}

#settingsButtonDiv:hover {
	opacity: 1;
	background: #333;
	transition: 0.2s;
}

#settingsButtonDiv img{
	overflow: hidden;
	position: fixed;
	top: 0;
	right: 0;
	width: 10vh;
	height: 10vh;
	max-height: 60px;
	max-width: 60px;
}

#settingsDiv {
	overflow: hidden;
	position: fixed;
	top: 0;
	right: 0;
	min-height: 100%;
	max-height: 100%;
	min-width: 0px;
	width: 0vw;
	background: #eee;
	z-index: 100;
	transition: 0.3s;
}

#settingsDiv.active {
	min-width: 300px;
	width: 22vw;
	transition: 0.3s;
	border-left: #2a465e solid; 
}

#settingsDiv #settingsCloseButton {
	height: 40px;
	width: 40px;
	border-radius: 10px;
	float: left;
	margin: 10px;
	background-color: #3B6182;
	border: none;
	color: white;
	font-weight: bold;
	font-size: 30px;
	display: block;
}

#settingsDiv table{
	margin-left: 15px;
	width: calc(100% - 30px);
	min-width: 270px;
}

#settingsDiv td{
	padding-top: 10px;
	min-width: 100px;
}

#settingsDiv table label{
	font-size: 22px;
	float: left;
}

/*Slider from W3Schools*/
#settingsDiv .slider{
	-webkit-appearance: none;	/* Override default CSS styles */
	appearance: none;
	width: 100%; /* Full-width */
	height: 25px; /* Specified height */
	background: #d3d3d3; /* Grey background */
	outline: none; /* Remove outline */
	opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
	-webkit-transition: .2s; /* 0.2 seconds transition on hover */
	transition: opacity .2s;
}

#settingsDiv .slider:hover{
	opacity: 1; /* Set transparency (for mouse-over effects on hover) */
}

#settingsDiv .slider::-webkit-slider-thumb {
	-webkit-appearance: none; /* Override default look */
	appearance: none;
	width: 25px; /* Set a specific slider handle width */
	height: 25px; /* Slider handle height */
	background: #3B6182; /* Blue background */
	cursor: pointer; /* Cursor on hover */
}

#settingsDiv .slider::-moz-range-thumb {
	width: 25px; /* Set a specific slider handle width */
	height: 25px; /* Slider handle height */
	background: #3B6182; /* Blue background */
	cursor: pointer; /* Cursor on hover */
}

#settingsDiv input[type=checkbox] {
	width: 25px;
	height: 25px;
	background: #d3d3d3;
	cursor: pointer;
	float: right;
	margin: 0px;
}

.checkbox-cell {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.checkbox-cell input {
	opacity: 0;
	cursor: pointer;
}

.checkmark {
	position: absolute;
	right: 19px;
	height: 25px;
	width: 25px;
	background-color: #d3d3d3;
	opacity: 0.7;
	pointer-events: none;
}

.checkbox-cell:hover input ~ .checkmark {
	opacity: 1;
}

.checkbox-cell input:checked ~ .checkmark {
	background-color: #3B6182;
}

.checkmark:after {
	content: "";
	position: absolute;
	display: none;
}

.checkbox-cell input:checked ~ .checkmark:after {
	display: block;
}

.checkbox-cell .checkmark:after {
	left: 9px;
	top: 5px;
	width: 5px;
	height: 10px;
	border: solid white;
	border-width: 0 3px 3px 0;
	-webkit-transform: rotate(45deg);
	-ms-transform: rotate(45deg);
	transform: rotate(45deg);
}

#settingsDiv {
	overflow: scroll;
}

#settingsDiv .header {
	width: 100%;
	height:10vh;
	min-height: 40px;
}

#settingsDiv .content {
	position: relative;
	height:80vh;
	width: 100%;
	min-height: 300px;
}

#settingsDiv .footer {
	position: relative;
	height:10vh;
	min-height: 50px;
}

#settingsDiv #export_btn {
	padding: 6px;
	width: 30%;
	margin-right: 10px;
	margin-left: 2px;
}

#settingsDiv #export_tb {
	font-size: 18px;
	padding: 6px;
	width: 65%;
	float: right;
}

#settingsDiv button {
	font-size: 18px;
	color: white;
	background: #3B6182;
	border: none;
}

#settingsDiv #reset_btn {
	padding: 6px;
	position: absolute;
	bottom: 30px;
	left: 0px;
	margin-left: 15px;
	margin-bottom: 15px;
	min-width: 150px;
}

#settingsDiv #clear_btn {
	padding: 6px;
	position: absolute;
	bottom: 0px;
	left: 0px;
	margin-left: 15px;
	min-width: 150px;
}

#settingsDiv .credits{
	max-height: 10vh;
	font-size: 16px;
	position: absolute;
	left: 0px;
	bottom: 0px;
	min-width: 280px;
	width: calc(100% - 20px);
	margin: 0px 10px 0px 10px;
}

#canvasDiv {
	position:relative;
	background: tan;
	width: 80vw;
	min-width: 160px;
	height: 80vh;
	margin: auto;
	padding: 20px;
}

#toolbarDiv {
	overflow: hidden;
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100vw;
	min-width: 200px;
	height: 10vh;
	max-height: 60px;
}

#toolbarBtnDiv {
	/*overflow: hidden;*/
	background-color: #3B6182;
	margin: 0px auto;
	width: 100vw;
	max-width: 600px;
	min-width: 200px;
	height: 10vh;
	max-height: 60px;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	user-select: none;
}

#toolbarBtnDiv div{
	border-right: 2px #2a465e solid;
	height: 100%;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	flex-grow: 1;
	flex-shrink: 1;
	flex-basis: auto;
}

#toolbarBtnDiv img {
	display: inline-block;
	height: 100%;
	max-height: 100%;
	max-width: 100%;
	min-width: 25%;
	object-fit: contain;
	flex-grow: 1;
	flex-shrink: 1;
	flex-basis: auto;
}

#toolbarBtnDiv #placeUnitsShape {
	position: absolute;
	height: 100%;
	display: inline-block;
	object-fit: contain;
	pointer-events: none;
}

#toolbarBtnDiv #placeUnitsShape polygon, #toolbarBtnDiv #placeUnitsShape circle {
	opacity: 0.25;
	transition: opacity .25s ease-in-out; /* IE */
	-moz-transition: opacity .25s ease-in-out; /* Firefox */
	-webkit-transition: opacity .25s ease-in-out; /* Chrome/Safari */
	-webkit-backface-visibility: hidden; /*Fixes image jitter in chrome/safari*/
}

#toolbarBtnDiv .highlight {
	background: #2a465e;
}

#toolbarBtnDiv label {
	display: block;
	text-align: center;
	line-height: calc(100% - 8px);
	min-width: 40px;
	text-decoration: none;
	background: none;
	border: none;
	color: white;
	font-weight: bold;
	margin: 4px;
	flex-grow: 1;
	flex-shrink: 1;
	flex-basis: auto;
/*	background: #2a465e;*/
}

canvas {
	position: absolute;
	top: 20px;
	left: 20px;
}

